--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MenuActivity">
-
-        </activity>
+        <activity android:name=".Activity.ChatActivity"></activity>
+        <activity android:name=".Activity.MenuActivity"></activity>
         <activity android:name=".Activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Activity.RegistrationActivity">
-
-        </activity>
+        <activity android:name=".Activity.RegistrationActivity"></activity>
     </application>
 
 </manifest>
