--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,28 @@
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activity.ChatActivity"></activity>
-        <activity android:name=".Activity.MenuActivity"></activity>
-        <activity android:name=".Activity.LoginActivity">
+        android:supportsRtl="true">
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:theme="@style/WithOut">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activity.RegistrationActivity"></activity>
+        
+        <activity
+            android:name=".Activity.ChatActivity"
+            android:theme="@style/WithOut" />
+
+        <activity
+            android:name=".Activity.MenuActivity"
+            android:theme="@style/WithBar" />
+
+        <activity
+            android:name=".Activity.RegistrationActivity"
+            android:theme="@style/WithOut" />
     </application>
 
 </manifest>
