--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
-            android:name=".Activity.LoginActivity"
+            android:name="com.example.safenudesapp.view.Activity.LoginActivity"
             android:theme="@style/WithOut">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,17 +20,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <activity
-            android:name=".Activity.ChatActivity"
+            android:name="com.example.safenudesapp.view.Activity.ChatActivity"
             android:theme="@style/WithOut" />
 
         <activity
-            android:name=".Activity.MenuActivity"
+            android:name="com.example.safenudesapp.view.Activity.MenuActivity"
             android:theme="@style/WithBar" />
 
         <activity
-            android:name=".Activity.RegistrationActivity"
+            android:name="com.example.safenudesapp.view.Activity.RegistrationActivity"
             android:theme="@style/WithOut" />
     </application>
 
