--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,13 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
+    
     buildTypes {
         release {
             minifyEnabled false
